  died in same move).

--Fixed signature weaknesses for object groupWith settings and to prevent
  deletion of states (thanks Arakira).

--Optimized use of blur filters during loading, reduced load time by 20%.

--Fixed invisible objects in saved map shots ('+' key) from tape playback page.

--Fixed get_self_test_log admin call to work with v22 house list changes.




Version 31a  Live Server Fixes

--Server support for returning a starting house list page around the player's
  house value (auto-setting how many houses on the list to skip if the client
  provides no skip value).  This works with v32 clients to auto-set the first
  house page shown, but is also backwards compatible with v31 clients.

--Added retry for deadlock on chilling_houses table when creating a new house.

--Added retry for deadlock on chilling_houses in flush call.

--Added work-around for strange, rare issue of house maps missing from the map
  cache table at the end of a robbery only to show up in that table later
  (maybe from an edit that ends right before the robbery).

--Added retries to work around deadlocks in isolated queries at the tail end
  of endRobHouse.

--Fix for rare bug where a timed out startRobHouse request crosses paths with
  the owner of that house dying, resulting in the forced death of the robber
  (thanks Max Jehle).





Version 31a   2014-January-31

--Unix Source bundle update.

(Includes all Live Server Fixes listed below.)




Version 31  Live Server Fixes

--Added a bunch of stats to the admin view.

--Added current-active-user count stat harvesting to every flush call.

--Fixed a deadlock in ping_house by retrying after a deadlock.

--Added a 5-minute delay before a new house goes on the house list to thwart
  the prevalence of farming neglected starter homes in the 2000-bracket on the
  house list.

--Added tracking of total daily connections stats.

--Fixed server source so that it can be installed on a fresh database without